Keycloak/i-deployment/kc-dev-internal.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
    app.kubernetes.io/instance: kc-dev
  name: kc-dev-internal
  namespace: keycloak
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: keycloak
    app.kubernetes.io/instance: kc-dev
    app.kubernetes.io/managed-by: keycloak-operator
  sessionAffinity: ClientIP
  type: ClusterIP
