Keycloak/i-deployment/kc-dev-mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc-dev-mysql
  namespace: keycloak
  labels:
    app: kc-dev-mysql
spec:
  selector:
    matchLabels:
      app: kc-dev-mysql
  template:
    metadata:
      name: kc-dev-mysql
      namespace: keycloak
      labels:
        app: kc-dev-mysql
    spec:
      containers:
        - name: kc-dev-mysql
          image: docker.io/mysql:9.2.0
          ports:
            - containerPort: 3306
              protocol: TCP
---
#DB Service
apiVersion: v1
kind: Service
metadata:
  name: kc-dev-mysql
  namespace: keycloak
  labels:
    app: kc-dev-mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: kc-dev-mysql
  type: LoadBalancer
