Keycloak/i-deployment/kc-dev-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kc-dev-ingress
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "INGRESS_NGINX"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kc-dev.k8s.intsmm.net
    secretName: kc-dev-tls
  rules:
  - host: kc-dev.k8s.intsmm.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kc-dev-service
            port:
              number: 8443
